--- a/index.html
+++ b/index.html
@@ -564,9 +564,11 @@
             }
         }
     </style>
+    <body>
+        <meta name="google-site-verification" content="yd_aqUNVy8ikgF1N6RIZFtNx3wj3eB_ar-P7H5EYDyM" />
+    </body>
 </head>
 <body>
-    <meta name="google-site-verification" content="yd_aqUNVy8ikgF1N6RIZFtNx3wj3eB_ar-P7H5EYDyM" />
     <!-- Navigation -->
     <nav class="navbar fixed w-full top-0 z-50 px-4 py-2 flex justify-between items-center">
         <a href="#" class="navbar-brand text-2xl text-white font-bold flex items-center">
