--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LJR40TJ4E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-3LJR40TJ4E');
+    </script>
     <style>
     	body {
       	font-family: 'AoyagiKouzan', serif;
@@ -564,9 +573,6 @@
             }
         }
     </style>
-    <body>
-        <meta name="google-site-verification" content="yd_aqUNVy8ikgF1N6RIZFtNx3wj3eB_ar-P7H5EYDyM" />
-    </body>
 </head>
 <body>
     <!-- Navigation -->
